# Elevate

./: .gitignore  .pylintrc  CONTEXT.md  CRUSH.md  PROMPT.md  README.md  dev-requirements.txt  distrobox.ini  io.github.thecodenomad.elevate.json  meson.build  org.thecodenomad.elevate.json  pyproject.toml  python-build-deps.json  python-deps.json  requirements.txt  update_python_dependencies.sh
.github/: release.yml
.github/workflows/: build.yml  release.yml
CONTEXT/: ANIMATIONS.md  ARCHITECTURE.md  BUILD.markdown  BUILD.md  DATA.markdown  DATA.md  DEPLOYMENT.markdown  DEPLOYMENT.md  FEATURES.md  LANGUAGES.md  LOGIC.markdown  LOGIC.md  SUMMARY.md  TECHNOLOGIES.md  TESTS.markdown  TESTS.md  UI.markdown  UI.md
LICENSES/: LICENSES_BSD-3-Clause.txt  LICENSES_GPLv3.txt  LICENSES_LGPLv2.1.txt  LICENSES_MIT.txt
data/: io.github.thecodenomad.elevate.desktop.in  io.github.thecodenomad.elevate.gschema.xml  io.github.thecodenomad.elevate.metainfo.xml.in  io.github.thecodenomad.elevate.service.in  meson.build  org.thecodenomad.elevate.desktop.in  org.thecodenomad.elevate.gschema.xml  org.thecodenomad.elevate.metainfo.xml.in  org.thecodenomad.elevate.service.in
data/icons/: meson.build
elevate/: constants.py  elevate.gresource  main.py  main.py.in  meson.build  settings.py  window.py
elevate/backend/: audio_stimulus.py  state_induction_controller.py  visual_stimulus.py
elevate/backend/animations/: __init__.py  base.py  bouncy_ball.py
elevate/blueprints/: preferences_window.blp  sidebar.blp  stimuli_renderer.blp  welcome_dialog.blp  window.blp
elevate/view/: epileptic_warning_dialog.py  preferences_window.py  sidebar.py  stimuli_renderer.py  welcome_dialog.py
po/: LINGUAS  POTFILES.in  elevate.pot  en_US.po  meson.build
po/en_US/LC_MESSAGES/: elevate.mo
src/: constants.py  elevate.gresource.xml  elevate.gresource.xml.in  elevate.in  main.py  meson.build  settings.py  window.py  window.ui
src/backend/: __init__.py  audio_stimulus.py  elevate_settings.py  state_induction_controller.py  visual_stimulus.py
src/backend/animations/: __init__.py  base.py  bouncy_ball.py  color_layers.py  pulse.py
src/blueprints/: epileptic_warning_dialog.blp  main_window.blp  preferences_window.blp  sidebar.blp  window.blp
src/view/: control_sidebar.py  epileptic_warning_dialog.py  preferences_window.py  sidebar.py  stimuli_renderer.py
tests/: conftest.py  test_animation_registry_extended.py  test_animations_color_layers_branches.py  test_animations_cycle.py  test_animations_init_registry.py  test_animations_more_coverage.py  test_audio_stimulus.py  test_audio_stimulus_extended.py  test_audio_stimulus_extended2.py  test_bouncy_ball_brain_wave_states.py  test_bouncy_ball_branches_extra.py  test_bouncy_ball_comprehensive.py  test_elevate_settings.py  test_elevate_settings_extended.py  test_pulse_extra_branch.py  test_state_change.py  test_state_induction_controller.py  test_state_induction_controller_extended.py  test_visual_stimulus.py  test_visual_stimulus_extended.py  test_visual_stimulus_extended2.py
