[tool.poetry]
name = "elevate"
version = "0.1.0"
description = "Meditation Guru"
authors = ["codenomad <codenomad@gmail.com>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
muselsl = "^2.3.1"
bitarray = "^3.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.14.1"
pytest-cov = "^6.2.1"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]                                           # Directory where tests are located
pythonpath = ["."]                                              # If your source code is in src/
addopts = "--cov=src -s --ignore=subprojects --ignore=src/view"
markers = ["wip: work in progress tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.coverage.run]
branch = true
source = []
omit = []

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.black]
line-length = 127
