[tool.poetry]
name = "elevate"
version = "0.1.16"
description = "Meditation Guru"
authors = ["codenomad <codenomad@gmail.com>"]
license = "GPL3"
readme = "README.md"
packages = [{ include = "backend", from = "elevate" }]

[tool.poetry.dependencies]
python = "^3.12"
PyGObject = "^3.46.0"
numpy = "^2.3.2"
# Future Support for EEG input
# muselsl = "^2.3.1"
# bitarray = "^3.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.14.1"
pytest-cov = "^6.2.1"
black = "^25.1.0"
pylint = "^3.3.7"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-s --cov=elevate --cov-report=term-missing --cov-fail-under=80 -q --ignore=subprojects --ignore=elevate/view"
markers = ["wip: work in progress tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.coverage.run]
branch = true
source = []
omit = [
    "elevate/constants.py",
    "elevate/main.py",
    "elevate/settings.py",
    "elevate/window.py",
    "elevate/view/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.black]
line-length = 105
